; ModuleID = '/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_config.c_dlamc4_.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_config.c_dlamc4_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dlamc4_.a = internal global i32 0, align 4
@dlamc4_.i__ = internal global i32 0, align 4
@dlamc4_.b1 = internal global i32 0, align 4
@dlamc4_.b2 = internal global i32 0, align 4
@dlamc4_.c1 = internal global i32 0, align 4
@dlamc4_.c2 = internal global i32 0, align 4
@dlamc4_.d1 = internal global i32 0, align 4
@dlamc4_.d2 = internal global i32 0, align 4
@dlamc4_.one = internal global i32 0, align 4
@dlamc4_.zero = internal global i32 0, align 4
@dlamc4_.rbase = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dlamc4_(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* @dlamc4_.a, align 4
  store i32 1, i32* @dlamc4_.one, align 4
  %11 = load i32, i32* @dlamc4_.one, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %12, align 4
  %14 = sdiv i32 %11, %13
  store i32 %14, i32* @dlamc4_.rbase, align 4
  store i32 0, i32* @dlamc4_.zero, align 4
  %15 = load i32*, i32** %4, align 8
  store i32 1, i32* %15, align 4
  %16 = load i32, i32* @dlamc4_.a, align 4
  %17 = load i32, i32* @dlamc4_.rbase, align 4
  %18 = mul nsw i32 %16, %17
  store i32 %18, i32* %8, align 4
  %19 = call i32 @dlamc3_(i32* %8, i32* @dlamc4_.zero)
  store i32 %19, i32* @dlamc4_.b1, align 4
  %20 = load i32, i32* @dlamc4_.a, align 4
  store i32 %20, i32* @dlamc4_.c1, align 4
  %21 = load i32, i32* @dlamc4_.a, align 4
  store i32 %21, i32* @dlamc4_.c2, align 4
  %22 = load i32, i32* @dlamc4_.a, align 4
  store i32 %22, i32* @dlamc4_.d1, align 4
  %23 = load i32, i32* @dlamc4_.a, align 4
  store i32 %23, i32* @dlamc4_.d2, align 4
  br label %24

24:                                               ; preds = %92, %3
  %25 = load i32, i32* @dlamc4_.c1, align 4
  %26 = load i32, i32* @dlamc4_.a, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %93

28:                                               ; preds = %24
  %29 = load i32, i32* @dlamc4_.c2, align 4
  %30 = load i32, i32* @dlamc4_.a, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %93

32:                                               ; preds = %28
  %33 = load i32, i32* @dlamc4_.d1, align 4
  %34 = load i32, i32* @dlamc4_.a, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %93

36:                                               ; preds = %32
  %37 = load i32, i32* @dlamc4_.d2, align 4
  %38 = load i32, i32* @dlamc4_.a, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %93

40:                                               ; preds = %36
  %41 = load i32*, i32** %4, align 8
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %42, -1
  store i32 %43, i32* %41, align 4
  %44 = load i32, i32* @dlamc4_.b1, align 4
  store i32 %44, i32* @dlamc4_.a, align 4
  %45 = load i32, i32* @dlamc4_.a, align 4
  %46 = load i32*, i32** %6, align 8
  %47 = load i32, i32* %46, align 4
  %48 = sdiv i32 %45, %47
  store i32 %48, i32* %8, align 4
  %49 = call i32 @dlamc3_(i32* %8, i32* @dlamc4_.zero)
  store i32 %49, i32* @dlamc4_.b1, align 4
  %50 = load i32, i32* @dlamc4_.b1, align 4
  %51 = load i32*, i32** %6, align 8
  %52 = load i32, i32* %51, align 4
  %53 = mul nsw i32 %50, %52
  store i32 %53, i32* %8, align 4
  %54 = call i32 @dlamc3_(i32* %8, i32* @dlamc4_.zero)
  store i32 %54, i32* @dlamc4_.c1, align 4
  %55 = load i32, i32* @dlamc4_.zero, align 4
  store i32 %55, i32* @dlamc4_.d1, align 4
  %56 = load i32*, i32** %6, align 8
  %57 = load i32, i32* %56, align 4
  store i32 %57, i32* %7, align 4
  store i32 1, i32* @dlamc4_.i__, align 4
  br label %58

58:                                               ; preds = %66, %40
  %59 = load i32, i32* @dlamc4_.i__, align 4
  %60 = load i32, i32* %7, align 4
  %61 = icmp sle i32 %59, %60
  br i1 %61, label %62, label %69

62:                                               ; preds = %58
  %63 = load i32, i32* @dlamc4_.b1, align 4
  %64 = load i32, i32* @dlamc4_.d1, align 4
  %65 = add nsw i32 %64, %63
  store i32 %65, i32* @dlamc4_.d1, align 4
  br label %66

66:                                               ; preds = %62
  %67 = load i32, i32* @dlamc4_.i__, align 4
  %68 = add nsw i32 %67, 1
  store i32 %68, i32* @dlamc4_.i__, align 4
  br label %58

69:                                               ; preds = %58
  %70 = load i32, i32* @dlamc4_.a, align 4
  %71 = load i32, i32* @dlamc4_.rbase, align 4
  %72 = mul nsw i32 %70, %71
  store i32 %72, i32* %8, align 4
  %73 = call i32 @dlamc3_(i32* %8, i32* @dlamc4_.zero)
  store i32 %73, i32* @dlamc4_.b2, align 4
  %74 = load i32, i32* @dlamc4_.b2, align 4
  %75 = load i32, i32* @dlamc4_.rbase, align 4
  %76 = sdiv i32 %74, %75
  store i32 %76, i32* %8, align 4
  %77 = call i32 @dlamc3_(i32* %8, i32* @dlamc4_.zero)
  store i32 %77, i32* @dlamc4_.c2, align 4
  %78 = load i32, i32* @dlamc4_.zero, align 4
  store i32 %78, i32* @dlamc4_.d2, align 4
  %79 = load i32*, i32** %6, align 8
  %80 = load i32, i32* %79, align 4
  store i32 %80, i32* %7, align 4
  store i32 1, i32* @dlamc4_.i__, align 4
  br label %81

81:                                               ; preds = %89, %69
  %82 = load i32, i32* @dlamc4_.i__, align 4
  %83 = load i32, i32* %7, align 4
  %84 = icmp sle i32 %82, %83
  br i1 %84, label %85, label %92

85:                                               ; preds = %81
  %86 = load i32, i32* @dlamc4_.b2, align 4
  %87 = load i32, i32* @dlamc4_.d2, align 4
  %88 = add nsw i32 %87, %86
  store i32 %88, i32* @dlamc4_.d2, align 4
  br label %89

89:                                               ; preds = %85
  %90 = load i32, i32* @dlamc4_.i__, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* @dlamc4_.i__, align 4
  br label %81

92:                                               ; preds = %81
  br label %24

93:                                               ; preds = %36, %32, %28, %24
  ret i32 0
}

declare dso_local i32 @dlamc3_(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
